syntax = "proto3";
option java_multiple_files = true;

package com.bitcoin.wallet;


service CallerService {
  rpc Say(SayRequest) returns (SayResponse) {}
}

message SayRequest {
  string name = 1;
}

message SayResponse {
  string message = 1;
}
